fix add button not showing up on some screens

--- a/src/components/event-card/speakers/index.module.scss
+++ b/src/components/event-card/speakers/index.module.scss
@@ -43,7 +43,7 @@
 
     .picWrapper {
       height: 100%;
-      width: 50px;
+      width: 55px;
 
       .pic {
         height: 100%;
